@@ -13,6 +13,11 @@ mountall (2.37) UNRELEASED; urgency=low
   * Honor nobootwait option for /var/* and /usr/* remote filesystems.
     LP: #654545
 
+  [ Eelco Dolstra ]
+  * Install the SIGUSR1 signal handler before daemonizing mountall, so that
+    there's no race with signals from network interfaces being brought up.
+    LP: #960079.
+
  -- Steve Langasek <vorlon@debian.org>  Fri, 18 May 2012 22:38:55 -0700
 
 mountall (2.36) precise; urgency=low
